--- a/styles/c5_main.css
+++ b/styles/c5_main.css
@@ -4,10 +4,22 @@
 }
 
 /* the styles for the elements */
+html {
+	background-color: #ffffff;
+}
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    margin-left: 10px;
+    margin-left: auto;
+	width: 600px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-right: auto;
+	border-style: solid;
+	border-color: #931420;
+	border-width: 3px;
+	background-color: #fffded;
 
 }
 a:focus, a:hover {
