--- a/styles/c5_main.css
+++ b/styles/c5_main.css
@@ -64,11 +64,13 @@ main {
 main h1 {
 	font-size: 150%;
 	padding: .3em 0;
-	border-style: solid;
+	border-style: double;
 	border-color: #931420;
 	border-width: 0px;
-	border-top-width: 3px;
-	border-bottom-width: 3px;
+	border-width: 3px;
+	border-radius: 5px;
+	box-shadow: 5px 5px black;
+
 
 }
 main h2 {
